<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jarojas.example.ContactActivity">

    <include android:id="@+id/miActionBar"
        layout="@layout/action_bar"></include>

    <LinearLayout android:layout_below="@id/miActionBar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tvContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactHintName"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tvContactEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactHintEmail"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tvContactComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactHintComment"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/contactBtnSend"
        android:onClick="sendMessage"
        android:theme="@style/customRaisedButton"/>
    </LinearLayout>
</RelativeLayout>
